[Feature #161612270] fix some grammar in the copy

--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
 	<section id="services">
 		<div class="container">
 			<div class="item">
-			<i class="fas fa-3x fa-rocket"></i>
-			<h3>Fast</h3>
-			<p>Our network of drivers and vehicles are spread out near you. Whenever you want do deliver something a driver will always be close by take up that delivery.
+			<i class="fas fa-3x fa-network"></i>
+			<h3>Coverage</h3>
+			<p>Our network of drivers and vehicles is spread out widely. Whenever you want to deliver something, a driver will always be close by to take up that delivery.
 			</p>
 			</div>
 			<div class="item">
 			<i class="fas fa-3x fa-grin-beam"></i>
 			<h3>Convenient</h3>
-			<p>We make deliveries easy so you can focus on more important things.You dont need to worry about fuel, vehicle maintainance or even directions.</p>
+			<p>We make deliveries easy, so you can focus on more important things.You do not need to worry about fuel, vehicle maintainance or even directions.</p>
 			</div>
 			<div class="item">
 			<i class="fas fa-3x fa-money-bill"></i>
 			<h3>Affordable</h3>
-			<p>We'll only charge you for the distance of the delivery. No paying drivers, insurance and other overhead charges. You'll have more money left to do more.
+			<p>We'll only charge you for the distance of the delivery. No paying drivers, vehicle insurance and other overhead charges. You'll save more.
 			</p>
 			</div>
 		</div>
