[Feature #161612270] truck icon, edit title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SendIt | Courier deliveries</title>
+	<title>Send-It | Courier deliveries</title>
 	<link href="fontawesome/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -56,7 +56,7 @@
 	<section id="services">
 		<div class="container">
 			<div class="item">
-			<i class="fas fa-3x fa-network"></i>
+			<i class="fas fa-3x fa-truck"></i>
 			<h3>Coverage</h3>
 			<p>Our network of drivers and vehicles is spread out widely. Whenever you want to deliver something, a driver will always be close by to take up that delivery.
 			</p>
